# SynchrotronSim

./: .gitignore.txt  CMakeLists.txt  README.md  visualize.py
src/: AnsysConverter.h  FieldMap.h  Integrator.h  LatticeManager.h  main.cpp
workspace/geometry/: Assembly_4_pole_exp.STL  big_solenoid.STL  quad_short.STL  rotoring_magnet_v2.STL
workspace/results/: debug_exp1.csv
workspace/tables/: experiments.csv  hardware_library.csv  lattice_configs.csv
